--- a/index.html
+++ b/index.html
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Stats preview card component</title>
 </head>
+
 <body>
+  <main class="card">
+    <div class="img-container"></div>
+    <div class="description-container">
+      <h1>Get <span class="highlighted-header">insights</span> that help your business grow.</h1>
+      <p class="card-description">
+        Discover the benefits of data analytics and make better decisions regarding revenue, customer
+        experience, and overall efficiency.
+      </p>
+      <div class="stat-container">
+        <div class="stat-block">
+          <h2 class="stat-number">10k+</h2>
+          <p class="stat-description">companies</p>
+        </div>
+        <div class="stat-block">
+          <h2 class="stat-number">314</h2>
+          <p class="stat-description">templates</p>
+        </div>
+        <div class="stat-block">
+          <h2 class="stat-number">12m+</h2>
+          <p class="stat-description">queries</p>
+        </div>
+      </div>
+    </div>
+  </main>
 
-  Get insights that help your business grow.
-
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
+
 </html>
