partly define styles

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | Stats preview card component</title>
@@ -13,7 +13,7 @@
 
 <body>
   <main class="card">
-    <div class="img-container"></div>
+   
     <div class="description-container">
       <h1>Get <span class="highlighted-header">insights</span> that help your business grow.</h1>
       <p class="card-description">
@@ -35,6 +35,7 @@
         </div>
       </div>
     </div>
+    <div class="img-container"></div>
   </main>
 
 </body>
