--- a/index.html
+++ b/index.html
@@ -37,6 +37,25 @@
     </div>
     <div class="img-container"></div>
   </main>
+//create footer with menu
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="footer-menu">
+        <ul class="footer-list">
+          <li class="footer-item"><a href="#">About</a></li>
+          <li class="footer-item"><a href="#">Pricing</a></li>
+          <li class="footer-item"><a href="#">Contact</a></li>
+        </ul>
+      </div>
+      <div class="footer-social">
+        <ul class="social-list">
+          <li class="social-item"><a href="#"><img src="./images/icon-facebook.svg" alt="facebook"></a></li>
+          <li class="social-item"><a href="#"><img src="./images/icon-twitter.svg" alt="twitter"></a></li>
+          <li class="social-item"><a href="#"><img src="./images/icon-instagram.svg" alt="instagram"></a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
