finish desktop version

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <main class="card">
-   
+
     <div class="description-container">
       <h1>Get <span class="highlighted-header">insights</span> that help your business grow.</h1>
       <p class="card-description">
@@ -30,14 +30,15 @@
           <p class="stat-description">templates</p>
         </div>
         <div class="stat-block">
-          <h2 class="stat-number">12m+</h2>
+          <h2 class="stat-number">12M+</h2>
           <p class="stat-description">queries</p>
         </div>
       </div>
     </div>
-    <div class="img-container"></div>
+    <div class="img-background">
+      <div class="img-container"></div>
+    </div>
   </main>
-
 </body>
 
 </html>
